Did reset button

--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
     <div>
         <h1> Baby Cipher</h1>
     </div>
-    <!-- <form id="form"> -->
     <span>Write a sentence:</span>
     <input type="text" id="clearText">
     <input type="submit" value="Cipher Up" id="submit">
-    <!-- <button type="button" onclick="getInput();">Cipher Up</button> -->
-    <!-- </form> -->
+    <button id="reset" onclick="reset()">Reset</button>
+    <p id="codedText"></p>
 
     <script src="script.js"></script>
 </body>
