--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
     <title>Cipher</title>
 </head>
 
 <body>
-    <div>
-        <h1> Baby Cipher</h1>
+    <div class="top">
+        <h1 id="title1" class="slide-in-right"> Simple Basic Cipher</h1>
+        <h1 id="title2" class="slide-in-left"> Simple Basic Cipher</h1>
     </div>
     <span>Write a sentence:</span>
     <input type="text" id="clearText">
