Done for the day, did title complete animation

--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
         <h1 id="title1" class="slide-in-right"> Simple Basic Cipher</h1>
         <h1 id="title2" class="slide-in-left"> Simple Basic Cipher</h1>
     </div>
-    <span>Write a sentence:</span>
-    <input type="text" id="clearText">
-    <input type="submit" value="Cipher Up" id="submit">
-    <button id="reset" onclick="reset()">Reset</button>
-    <p id="codedText"></p>
+    <div>
+        <span class="typing-effect">Write a sentence:</span>
+        <input type="text" id="clearText">
+        <input type="submit" value="Cipher Up" id="submit">
+        <button id="reset" onclick="reset()">Reset</button>
+        <p id="codedText"></p>
+    </div>
 
     <script src="script.js"></script>
 </body>
