Decent predone status, redline works, whiteline work

--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
     <div class="top">
         <h1 id="title1" class="slide-in-right"> Simple Basic Cipher</h1>
         <h1 id="title2" class="slide-in-left"> Simple Basic Cipher</h1>
+        <hr class="slide-in-left" />
+        <section class="within slide-in-bottom"></section>
     </div>
-    <div>
+
+    <div class="bottom">
         <span class="typing-effect">Write a sentence:</span>
         <input type="text" id="clearText">
         <input type="submit" value="Cipher Up" id="submit">
